--- a/Interface-Netflix/css/style.css
+++ b/Interface-Netflix/css/style.css
@@ -23,6 +23,43 @@ body{
 
 /* Barra de nav */
 
+nav.mobile{
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    background-image: url(../img/icon-menu.png);
+    background-size: 100% 100%;
+    display: none;
+}
+
+nav.mobile ul{
+    z-index: 999;
+    text-align: center;
+    position: absolute;
+    top: 58px;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    opacity: 0;
+}
+
+nav.mobile li{
+    padding: 5px 0;
+    position: relative;
+    list-style-type: none;
+    text-transform: uppercase;
+}
+
+nav.mobile li:hover{
+    transition: 1s;
+    background-color: #aaaaaa;
+}
+
+nav.mobile a{
+    text-decoration: none;
+    color: black;
+}
+
 header .container{
     display: flex;
     align-items: center;
@@ -35,13 +72,13 @@ header h2{
     font-family: 'Arial Black';
 }
 
-header a{
+header nav.desktop a{
     text-decoration: none;
     color:#faebd7;
     margin-right: 10px;
 }
 
-header a:hover{
+header nav.desktop a:hover{
     color: #c7c5c2;
     font-weight: bolder;
 }
@@ -106,4 +143,30 @@ header a:hover{
     width: 100%;
     height: 100%;
     display: block;
+}
+
+/* RESPONSIVE */
+
+@media screen and (max-width:800px){
+    .descricao{
+        max-width: 50%;
+    }
+}
+
+@media screen and (max-width:720px){
+    nav.desktop{
+        display: none;
+    }
+    nav.mobile{
+        display: block;
+    }
+    nav.mobile ul:hover{
+    display: block;
+}
+}
+
+@media screen and (max-width:368px){
+    .btn{
+        margin-top: 6px;
+    }
 }
