--- a/Interface-Netflix/css/style.css
+++ b/Interface-Netflix/css/style.css
@@ -143,6 +143,7 @@ header nav.desktop a:hover{
     width: 100%;
     height: 100%;
     display: block;
+    margin-top: 5px;
 }
 
 /* RESPONSIVE */
